[metadata]
name = pyMohabe
version = 0.0.1
license = MIT
description = Parsing for german college modulehandbooks (Modulhanbücher)
long_description = file: README.rst
author = Uwe Knopf
#author_email = <Optional: author e-mail>
platforms = unix, linux, osx, cygwin, win32
classifiers=
   <Topic :: Home Automation>
   <Topic :: Education>
   <Topic :: Database>
   Programming Language :: Python :: 3 :: Only

[options]
packages = slapping:
python_requires = >=3.6
package_dir =
    =src
include_package_data = True
zip_safe = no
install_requires =
   #<pysimplegui> #packages for pip to install

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed
   

[options.packages.find]
where=src